[package]
name = "tcl_derive"
version = "0.1.5"
authors = ["oooutlk <oooutlk@outlook.com>"
	, "Poor Yorick ethereum 0x0b5049C148b00a216B29641ab16953b6060Ef8A6 <FKZ07MMhpEiXkzJX5-HLfw9PsdeL_sKULlPCVSbBoZE@pooryorick.com>"]
edition = "2021"
license = "AGPL-3.0"
keywords = [ "tcl", "binding", "proc" ]
readme = "README.md"
repository = "https://github.com/oooutlk/tcltk"
description = "Macros for tcl crate to register functions/closures as Tcl commands"

[lib]
proc-macro = true

[dependencies]
bind_syn = "0.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits","full","visit-mut"] }
uuid = { version = "1.6", features = ["v4"] }
