[package]
name = "tk"
version = "0.1.10"
authors = ["oooutlk <oooutlk@outlook.com>"
	, "Poor Yorick ethereum 0x0b5049C148b00a216B29641ab16953b6060Ef8A6 <FKZ07MMhpEiXkzJX5-HLfw9PsdeL_sKULlPCVSbBoZE@pooryorick.com>"]
edition = "2021"
license = "AGPL-3.0"
keywords = [ "gui", "tcl", "tk", "binding" ]
repository = "https://github.com/oooutlk/tcltk"
homepage = "https://oooutlk.github.io/tk/"
readme = "README.md"
categories = [ "gui", "api-bindings" ]
description = "Rust bindings for Tk GUI library"

[dependencies]
bitflags = "1.0"
enumx = "0.4"
cex = "0.5"
#clib = "0.2.4"
clib = { git = "https://github.com/pooryorick/clib" }
heredom = "0.1"
serde = { version = "1.0", features=["derive"] }
tcl = { path = "../tcl", version = "0.1.8" }
tcl_derive = { path = "../tcl_derive", version = "0.1.4" }
tuplex = "0.1"
strum = "0.19"
strum_macros = "0.19"
once_cell = "1.17.1"
num_enum = "0.7.1"

[build-dependencies]
inwelling = "0.5.2"

[dev-dependencies]
regex = "1.7.1"

[features]
libtk = []
cex_log = ["cex/log", "tcl/cex_log"]
cex_env_log = ["cex/env_log", "tcl/cex_env_log"]
cex_pretty_log = ["cex/pretty_log", "tcl/cex_pretty_log"]
cex_enum32 = ["cex/enum32", "tcl/cex_enum32"]

[package.metadata.inwelling.clib]
build = ["tk90"]

[package.metadata.inwelling.clib.spec.tk90]
pc-alias = ["tk","tk9.0"]
headers = ["tk.h"]
dependencies = ["tcl90"]
header-dependencies = ["x11"]
exe = ["wish90", "wish"]
includedir = ["tk9.0", "tk"]

[package.metadata.inwelling.clib.spec.tk90.libs]
tk = ["libtk90.so", "libtk9.0.so", "libtk.so", "libtk90.a", "libtk.a", "libtk90.dll.a", "libtk.dll.a", "tk90.dll", "tk90.lib"]
tkstub = ["libtkstub90.a", "libtkstub9.0.a", "libtkstub.a", "tkstub90.lib"]
